--- a/style.css
+++ b/style.css
@@ -1,517 +1,528 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: poppins;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Montserrat;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    /* background-image: linear-gradient(to right, #ee9ca7, #ffdde1); */
-    background-color: #FFF5E0;
+  background-color: #f1f1fb;
 }
 
 header {
-    min-height: 40px;
-    background-color: #BA1D1D;
-
+  min-height: 40px;
+  background-color: #233163;
 }
 
 nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 nav li {
-    display: inline-block;
-    list-style-type: none;
-    padding: 30px 10px;
-    font-size: 18px;
-    font-weight: 600;
+  display: inline-block;
+  list-style-type: none;
+  padding: 30px 10px;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 nav a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 nav a:hover {
-    color: #ee9ca7;
-}
-
-.logo {
-    color: white;
-    padding: 20px 0;
+  color: #2abffa;
 }
 
 .hamburger {
-    display: none;
-    cursor: pointer;
+  display: none;
+  cursor: pointer;
 }
 
-
 @media (max-width: 1030px) {
-    .hamburger {
-        display: flex;
-        align-items: center;
-        font-size: 2em;
-        position: absolute;
-        top: 70px;
-        right: 70px;
-    }
+  .hamburger {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 2em;
+    position: absolute;
+    top: 45px;
+    right: 70px;
+  }
 
+  nav li {
+    display: none;
+    border-top: 1px solid white;
+  }
 
-    nav li {
-        display: none;
-        border-top: 1px solid white;
-    }
+  nav ul {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding-top: 30px;
+  }
 
-    nav ul {
-        display: block;
-        width: 100%;
-        text-align: center;
-        padding-top: 30px;
-    }
+  nav {
+    flex-direction: column;
+  }
 
-    nav {
-        flex-direction: column;
-    }
-
-    .wrap-logo {
-        width: 100%;
-        padding-top: 50px;
-        padding-left: 50px;
-    }
-
+  .wrap-logo {
+    width: 100%;
+    margin-top: 45px;
+    padding-left: 50px;
+  }
 }
 
 .active {
-    display: block;
+  display: block;
 }
-
 
 /* MAIN STARTS */
 .container {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 10%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 10%;
 }
 
 .welcome {
-    background-color: #BA1D1D;
-    display: inline-block;
-    padding: 10px 20px;
-    border-radius: 15px;
-    color: white;
-    font-size: 2em;
+  background-color: #233163;
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 15px;
+  color: white;
+  font-size: 2em;
 }
 
 .normal-text {
-    color: #4F0000;
-    font-size: 1.5em;
+  color: #233163;
+  font-size: 1.5em;
 }
 
 .spaces {
-    margin-top: 20px;
-    margin-bottom: 28px;
+  margin-top: 20px;
+  margin-bottom: 28px;
 }
 
 .right a {
-    text-decoration: none;
-    color: white;
-    border-radius: 15px;
-    font-size: 1.5em;
-    margin-right: 20px;
-    font-weight: 800;
+  text-decoration: none;
+  color: white;
+  border-radius: 15px;
+  font-size: 1.5em;
+  margin-right: 20px;
+  font-weight: 800;
 }
 
 .right a:hover {
-    color: #ee9ca7;
-    opacity: 0.8;
+  background-color: #f1f1fb;
+  color: #233163;
+  border: 2px solid #233163;
 }
 
 .marketplace {
-    display: flex;
-    justify-content: flex-start;
-
+  display: flex;
+  justify-content: flex-start;
 }
 
 .shopee img {
-    width: 30px;
-    margin-right: 5px;
+  width: 30px;
+  margin-right: 5px;
 }
 
 .shopee {
-    background: #BA1D1D;
-    display: flex;
-    align-items: center;
-    padding: 10px 20px;
+  background: #233163;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
 }
 
 .tokped img {
-    width: 30px;
-    margin-right: 5px;
+  width: 30px;
+  margin-right: 5px;
 }
 
 .tokped {
-    background: #BA1D1D;
-    display: flex;
-    align-items: center;
-    padding: 10px 20px;
+  background: #233163;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
 }
 
 @media (max-width: 1030px) {
-    .container {
-        flex-direction: column
-    }
+  .container {
+    flex-direction: column;
+  }
 
-    .left-img {
-        scale: 0.7;
-        margin-top: -70px;
-        margin-bottom: -70px;
-    }
+  .left-img {
+    scale: 0.7;
+    margin-top: -70px;
+    margin-bottom: -70px;
+  }
 
-    .right {
-        margin: auto;
-        text-align: center;
-    }
+  .right {
+    margin: auto;
+    text-align: center;
+  }
 
-    .welcome {
-        width: 100%;
-    }
+  .welcome {
+    width: 100%;
+  }
 
-    .marketplace {
-        justify-content: center;
-    }
+  .marketplace {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 600px) {
-    .welcome {
-        width: 60%;
-        font-size: 1.25em;
-    }
+  .welcome {
+    width: 60%;
+    font-size: 1.25em;
+  }
 
-    .left-img {
-        margin-top: -30px;
-        margin-bottom: -30px;
-    }
+  .left-img {
+    margin-top: -30px;
+    margin-bottom: -30px;
+  }
 
-    .normal-text {
-        font-size: 1.1em;
-    }
+  .normal-text {
+    font-size: 1.1em;
+  }
 
-    .right a {
-        font-size: 1em;
-    }
+  .right a {
+    font-size: 1em;
+  }
 }
 
 @media (max-width: 444px) {
-    .logo {
-        font-size: 1em;
-    }
+  .logo {
+    font-size: 1em;
+  }
+
+  .hamburger {
+    top: 35px;
+  }
 }
 
 #hero {
-    margin-bottom: 10%;
+  margin-bottom: 10%;
 }
 
 /* KEUNGGULAN STARTS */
 
 .sub-title {
-    background-color: #BA1D1D;
-    display: inline-block;
-    border-radius: 15px;
-    padding: 10px 20px;
-    color: white;
-    font-size: 2em;
-    margin-bottom: 40px;
+  background-color: #233163;
+  display: inline-block;
+  border-radius: 15px;
+  padding: 10px 20px;
+  color: white;
+  font-size: 2em;
+  margin-bottom: 40px;
 }
 
 .wrapper-keunggulan {
-    display: flex;
-
+  display: flex;
 }
 
 #keunggulan {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    padding-bottom: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 60px;
 }
 
 .card-keunggulan {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
-    margin: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  margin: 50px;
 }
 
 .symbol {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .symbol:hover {
-    color: #BA1D1D;
+  color: #233163;
 }
 
 .description {
-    color: #4F0000;
-    font-weight: 500;
-    font-size: 1.2em;
+  color: #233163;
+  font-weight: 500;
+  font-size: 1.2em;
 }
 
 @media (max-width: 1030px) {
-    .wrapper-keunggulan {
-        flex-direction: column;
-    }
+  .wrapper-keunggulan {
+    flex-direction: column;
+  }
 }
 
-@media(max-width: 600px) {
-    .sub-title {
-        font-size: 1.25em;
-    }
+@media (max-width: 600px) {
+  .sub-title {
+    font-size: 1.25em;
+  }
 
-    .description {
-        font-size: 1em;
-    }
+  .description {
+    font-size: 1em;
+  }
 }
 
 /* TAMPILAN STARTS */
 #tampilan {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 120px;
 }
 
 .wrapper-tampilan {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .card-tampilan img {
-    height: 300px;
+  height: 300px;
 }
 
 .card-tampilan {
-    border: 2px solid #4F0000;
-    margin: 20px;
-    background-color: white;
-    border-radius: 15px;
-    height: 310px;
-    overflow: hidden;
-    box-shadow: 5px 5px 20px black;
-    position: relative;
+  border: 2px solid #233163;
+  margin: 20px;
+  background-color: white;
+  border-radius: 15px;
+  height: 310px;
+  overflow: hidden;
+  box-shadow: 5px 5px 20px black;
+  position: relative;
 }
 
 .img-text {
-    width: 300px;
-    height: 310px;
-    padding: 10px;
-    position: absolute;
-    bottom: 0px;
-    background-color: black;
-    font-size: 2em;
-    color: white;
-    padding: 139px 0;
-    text-align: center;
-    visibility: hidden;
-
+  width: 300px;
+  height: 310px;
+  padding: 10px;
+  position: absolute;
+  bottom: 0px;
+  background-color: black;
+  font-size: 2em;
+  color: white;
+  padding: 139px 0;
+  text-align: center;
+  visibility: hidden;
 }
 
 .card-tampilan:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .card-tampilan:hover .img-text {
-    opacity: 0.7;
-    visibility: visible;
+  opacity: 0.7;
+  visibility: visible;
 }
 
 .card-tampilan:hover .img-tampilan {
-    transform: scale(1.1) rotate(-5deg);
+  transform: scale(1.1) rotate(-5deg);
 }
 
 .tampilan-text {
-    text-align: center;
+  text-align: center;
 }
 
-@media(max-width: 1030px) {
-    .wrapper-tampilan {
-        flex-direction: column;
-    }
+@media (max-width: 1030px) {
+  .wrapper-tampilan {
+    flex-direction: column;
+  }
 }
 
 #tampilan {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 /* REVIEW PRODUK STARTS */
 
 .wrapper-slider {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-    height: 400px;
-    overflow: hidden;
-    cursor: grab;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  height: 400px;
+  overflow: hidden;
+  cursor: grab;
 }
 
 .slider {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: auto;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    /*because 10 imgs*/
-    column-gap: 2rem;
-    pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: auto;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  /*because 10 imgs*/
+  column-gap: 2rem;
+  pointer-events: none;
 }
 
 .card-slider {
-    width: 300px;
-    height: 400px;
-    background-color: white;
-    border-radius: 15px;
-    display: flex;
-    text-align: center;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
+  border: 2px solid #233163;
+  color: #233163;
+  width: 300px;
+  height: 400px;
+  background-color: white;
+  border-radius: 15px;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
 
 .card-slider img {
-    flex-basis: 150px;
-    width: 150px;
-    height: 150px;
-    margin-bottom: 20px;
-    margin-top: 10px;
+  flex-basis: 150px;
+  width: 150px;
+  height: 150px;
+  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .card-slider span {
-    flex-basis: 150px;
-    flex-grow: 1;
+  flex-basis: 150px;
+  flex-grow: 1;
 }
 
 .relative {
-    position: relative;
-    margin-top: 250px;
+  position: relative;
+  margin-top: 250px;
 }
 
 #review {
-    margin-top: 80px;
-    margin-bottom: 500px;
+  margin-top: 80px;
+  margin-bottom: 500px;
 }
 
 .review-sub {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 300px;
-    text-align: center;
-
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  text-align: center;
 }
 
-@media(max-width: 444px) {
-    .review-sub {
-        width: 250px;
-    }
+@media (max-width: 444px) {
+  .review-sub {
+    width: 250px;
+  }
 }
 
 /* TENTANG PENULIS STARTS */
 aside {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 600px;
 }
 
 .card-tentang {
-    display: flex;
-    justify-content: space-evenly;
-    color: #BA1D1D;
-    background-color: white;
-    border: 2px solid #4F0000;
-    border-radius: 15px;
-    /* position: relative; */
-    padding: 40px;
-    text-align: justify;
-    /* padding-left: 80px; */
-
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  color: #233163;
+  background-color: white;
+  border: 2px solid #233163;
+  border-radius: 15px;
+  padding: 40px;
+  text-align: left;
 }
 
 .card-tentang img {
-    border-radius: 15px;
-    border: 2px solid #4F0000;
-    align-self: center;
-    flex-basis: 150px;
+  border-radius: 15px;
+  border: 2px solid #233163;
 }
 
-.card-tentang span {
-    margin-left: 40px;
-    font-weight: 500;
-    text-align: left;
+.text-penulis {
+  margin-left: 20px;
 }
 
-@media(max-width: 768px) {
-    .card-tentang span {
-        font-size: 1em;
-    }
+.gambar-vito {
+  width: 150px;
 }
 
-@media(max-width: 444px) {
-    .card-tentang span {
-        font-size: 0.8em;
-    }
+@media (max-width: 768px) {
+  .card-tentang span {
+    font-size: 1em;
+  }
 
-    .card-tentang {
-        padding: 20px;
-    }
+  .text-penulis {
+    font-size: 1.2em;
+  }
+
+  .gambar-vito {
+    width: 120px;
+  }
+}
+
+@media (max-width: 640px) {
+  .card-tentang {
+    padding: 20px;
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+}
+
+@media (max-width: 444px) {
+  .card-tentang span {
+    font-size: 0.8em;
+  }
+
+  .card-tentang {
+    padding: 20px;
+  }
+
+  .text-penulis {
+    font-size: 1em;
+  }
 }
 
 /* FOOTER STARTS */
 .social-media a {
-    color: #4F0000;
-    font-size: 40px;
-    margin: 40px 10px;
-    text-decoration: none;
+  color: #fff;
+  font-size: 40px;
+  margin: 40px 10px;
+  text-decoration: none;
 }
 
 .social-media a:hover {
-    color: #ee9ca7;
+  color: #2abffa;
 }
 
 footer {
-    margin-top: 80px;
-    height: 120px;
-    background-color: #BA1D1D;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  margin-top: 80px;
+  height: 120px;
+  background-color: #233163;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 footer h4 {
-    color: white;
-    font-size: 1.5em;
+  color: white;
+  font-size: 1.5em;
 }
 
 @media (max-width: 444px) {
-    footer h4 {
-        font-size: 1em;
-    }
+  footer h4 {
+    font-size: 1em;
+  }
 }
